# thought-trails

./: .env.example  .gitignore  CLAUDE.md  DOC-RECONCILIATION.md  IMPLEMENTATION-ROADMAP.md  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
docs/: PORTFOLIO-DISPOSITION.md
fixtures/deepseek-samples/: sample-01-math-bat-ball.ndjson  sample-02-math-sqrt2.ndjson  sample-03-math-probability.ndjson  sample-04-coding-fibonacci.ndjson  sample-05-coding-bst.ndjson  sample-06-coding-mergesort.ndjson  sample-07-multi-hop-bloops.ndjson  sample-08-multi-hop-taller.ndjson  sample-09-open-llm-risks.ndjson  sample-10-open-microservices.ndjson
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: cot_parser.rs  lib.rs  main.rs  ollama.rs  session.rs  spike.rs  types.rs
src-tauri/src/commands/: mod.rs  ollama.rs  session.rs
src/components/: comparison-prompt.tsx  comparison-stats.tsx  comparison-view.tsx  graph-canvas.tsx  graph-search.tsx  graph-toolbar.tsx  node-detail-panel.tsx  prompt-panel.tsx  replay-controls.tsx  session-sidebar.tsx  status-bar.tsx  window-controls.tsx
src/hooks/: use-graph-search.ts  use-graph-simulation.ts  use-ollama-stream.ts  use-replay.ts  use-sessions.ts  use-tree-layout.ts
src/lib/: exporter.ts  graph-builder.test.ts  graph-builder.ts  ollama-client.ts  session-client.ts
src/types/: index.ts
