[package]
name = "thought-trails"
version = "0.1.0"
description = "Visualize LLM chain-of-thought as a force-directed graph"
authors = ["you"]
edition = "2021"

[lib]
name = "thought_trails_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
log = "0.4"
